--- a/src/Components/Sections/Feedbacks/Feedbacks.module.scss
+++ b/src/Components/Sections/Feedbacks/Feedbacks.module.scss
@@ -1,5 +1,5 @@
 .Feedbacks {
-  background: url('../../../Assets/images/feedback/bg.jpg');
+  background: url('../../../Assets/images/feedback/bg.webp');
   background-repeat: no-repeat;
   background-size: 100% 100%;
   border-bottom: 5px solid black;
