--- a/src/Components/Sections/Hero/Hero.module.scss
+++ b/src/Components/Sections/Hero/Hero.module.scss
@@ -1,5 +1,5 @@
 .Hero {
-  background: url('../../../Assets/images/hero/bg.jpg');
+  background: url('../../../Assets/images/hero/bg.webp');
   background-repeat: no-repeat;
   background-size: 100% 100%;
   border-bottom: 5px solid black;
