--- a/src/Components/Footer/Footer.module.scss
+++ b/src/Components/Footer/Footer.module.scss
@@ -1,5 +1,5 @@
 .Footer {
-  background: url(../../Assets/images/header/bg.jpg);
+  background: url(../../Assets/images/header/bg.webp);
   background-repeat: no-repeat;
   background-position: top;
   background-size: 100% 100%;
