--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -1,5 +1,5 @@
 .Header {
-  background: url(../../Assets/images/header/bg.jpg);
+  background: url(../../Assets/images/header/bg.webp);
   background-repeat: no-repeat;
   background-position: top;
   background-size: 100% 100%;
@@ -73,6 +73,9 @@
 .BasketImg img {
   position: relative;
   top: 4px;
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
 }
 
 .BasketImg span {
