--- a/src/Components/Sections/Intro/Intro.module.scss
+++ b/src/Components/Sections/Intro/Intro.module.scss
@@ -1,5 +1,5 @@
 .Intro {
-  background: url('../../../Assets/images/intro/bg.jpg');
+  background: url('../../../Assets/images/intro/bg.webp');
   background-repeat: no-repeat;
   background-size: 100% 100%;
   border-bottom: 5px solid black;
@@ -10,10 +10,23 @@
   padding: 40px 0;
 }
 
-.Title h3 {
+.Title {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.Title h1:first-child {
+  border-radius: 15px 0 0 15px;
+}
+
+.Title h1:nth-child(2) {
+  border-radius: 0 15px 15px 0;
+}
+
+.Title h1 {
   font-size: 2.5em;
   background-color: rgb(233, 226, 226);
-  border-radius: 25px;
   display: inline;
   padding: 10px;
   text-transform: uppercase;
@@ -30,11 +43,15 @@
   justify-content: center;
   gap: 10px;
   flex-wrap: wrap;
+  div {
+    max-width: 400px;
+  }
 }
 
 .InfoImages img {
-  max-width: 400px;
+  height: 100%;
   width: 100%;
+  object-fit: cover;
   background: white;
   padding: 5px;
   border-radius: 15px;
@@ -61,4 +78,10 @@
 
 .ButtonWrapper button {
   border: 2px solid white;
+}
+
+@media only screen and (max-width: 586px) {
+  .Title h1 {
+    border-radius: 15px !important;
+  }
 }
