add language to local storage, css fix

--- a/src/Components/CartModal/CartModal.module.scss
+++ b/src/Components/CartModal/CartModal.module.scss
@@ -41,10 +41,10 @@
 .Close {
   color: white;
   position: absolute;
-  right: 1em;
+  right: 2em;
   font-size: 2em;
   cursor: pointer;
-  top: 0;
+  top: 1em;
   font-weight: var(--font-weight-l);
   transition: all 0.4s ease-in-out;
   &:hover {
