--- a/src/App/styles/index.scss
+++ b/src/App/styles/index.scss
@@ -11,6 +11,21 @@
   width: 100%;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #b9b9b9;
+}
+
+::-webkit-scrollbar-thumb {
+  background: url('/src/Assets/images/header/bg.webp');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
 @media only screen and (max-width: 768px) {
   .app {
     font-size: 14px;
